stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_expected_callable_type.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "1f2fc1b89c6f89df000b1f3910330db5be3c35df72ad37dc074bff28a0a90ab3",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-callable-type-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of undeclared trait <bad-contract>) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2846,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2846,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "d506c60983ed1f3965194737a0b65fbcb51c23c85983da9514f85bccf0b8ad29",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-callable-type-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: expected a callable contract, found uint) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2846,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2846,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "0dfaa59369e452c4fe6048a47e3d06bf2f0c0f309db5de0a4ec3190a812f59c9",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-callable-type-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: expected a callable contract, found uint) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2846,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2846,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f51df90e6e1b4afcd20d724688df376cc921acbc41051cbfab5b9ddfd7f9b798",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-callable-type-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of undeclared trait <bad-contract>) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2846,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2846,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b8ba0e5cf85c0b02c45180c18dcdfb5ef1fcb06e8063981880505121d169f7f3",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-callable-type-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: expected a callable contract, found uint) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2846,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2846,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "5b689e2a1addd379c1ff5c972cfa3ebd85c4c37053ab27e8056ae74b92c96aa5",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-callable-type-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: expected a callable contract, found uint) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2846,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2846,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6ed5b3c85b10639b11c2565d4e1764a5d3d60b535077cbee6c8ffac6414d09d1",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-callable-type-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: expected a callable contract, found uint) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2846,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2846,
    ),
  )),
]
