stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_expected_name.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "6c07c6f4a33fe0591307018d79f917c13aa4ba6fe6af53fef764b14a85810a95",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-name-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: match on a optional type uses the following syntax: (match input some-name if-some-expression if-none-expression). Caused by: expected a name argument to this function) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 15,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1222,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 15,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1222,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3f2434a02ef003989e9a3447f9ff632407c8a98b400b258c02995625a8accae0",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-name-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: match on a optional type uses the following syntax: (match input some-name if-some-expression if-none-expression). Caused by: expected a name argument to this function) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 15,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1222,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 15,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1222,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "d94a69dd539efdb2294021dad9a3f5d9351842707054236f8df64f47b2cb380a",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-name-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: match on a optional type uses the following syntax: (match input some-name if-some-expression if-none-expression). Caused by: expected a name argument to this function) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 15,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1222,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 15,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1222,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7b5ea9119e432d057b0441c8a186307826c34a21c27f403416b22cf825f770fd",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-name-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: match on a optional type uses the following syntax: (match input some-name if-some-expression if-none-expression). Caused by: expected a name argument to this function) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 15,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1222,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 15,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1222,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "4051c33775ed70fdf7d5157cefa6be169b7701095a97ce41d9c64d362d7687f5",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-name-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: match on a optional type uses the following syntax: (match input some-name if-some-expression if-none-expression). Caused by: expected a name argument to this function) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 15,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1222,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 15,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1222,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "27c008b080fdf2d158d45ab66a19de51136ae016f298088ccacd9ab1a971dca9",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-name-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: match on a optional type uses the following syntax: (match input some-name if-some-expression if-none-expression). Caused by: expected a name argument to this function) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 15,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1222,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 15,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1222,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "dd825777f40039516238dc8a6d8719f90d7b4bdd09eed54fbbc310fdd4d069a5",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-name-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: match on a optional type uses the following syntax: (match input some-name if-some-expression if-none-expression). Caused by: expected a name argument to this function) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 15,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1222,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 15,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1222,
    ),
  )),
]
